<resources>
    <string name="app_name">ShareFoodManagement</string>
    <string name="welcome">Chào mừng bạn đến Share Food Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="insert_info">Bạn cần nhập đủ thông tin</string>
    <string name="login_fail">Tên tài khoản hoặc mật khẩu không chính xác.</string>
    <string name="login_success">Đăng nhập thành công.</string>
    <string name="management_list">Danh mục quản lý</string>
    <string name="restaurant_manager">Quản lý nhà hàng</string>
    <string name="user_manager">Quản lý tài khoản</string>
    <string name="category_manager">Quản lý thực đơn</string>
    <string name="error">Lỗi không xác định</string>
    <string name="restaurant_info">Thông tin nhà hàng</string>
    <string name="province_info">Thông tin tỉnh</string>
    <string name="delete_success">Xóa thành công</string>
    <string name="block_success">Đã khóa thành công</string>
    <string name="active">Tình trạng: Hoạt động</string>
    <string name="lock">Tình trạng: Khóa</string>
    <string name="list_user">Tài khoản người dùng</string>
    <string name="list_manager">Tài khoản quản lý nhà hàng</string>
    <string name="user_info">Thông tin tài khoản</string>
    <string name="lock_success">Khóa tài khoản thành công</string>
    <string name="add_category">Thêm thực đơn</string>
    <string name="category_name">Tên thực đơn...</string>
    <string name="category_image">Link ảnh thực đơn...</string>
    <string name="add">Thêm</string>
    <string name="image_error">Link ảnh không hợp lệ</string>
    <string name="add_success">Thêm thành công</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="update_category">Cập nhật thực đơn</string>
    <string name="restaurant_desc">Thông tin nhà hàng</string>
    <string name="food_list">Danh sách món ăn</string>
    <string name="into_info">Bạn cần nhập đủ thông tin</string>
    <string name="info_food">Thông tin món ăn</string>
    <string name="name_food">Tên món ăn</string>
    <string name="desc_food">Mô tả món ăn</string>
    <string name="link_food">Link ảnh món ăn</string>
    <string name="recipe_food">Công thức món ăn</string>
    <string name="add_food">Thêm món ăn</string>
    <string name="price_food">Giá</string>
    <string name="edit_res">Cập nhật thông tin nhà hàng</string>
    <string name="name_res">Tên nhà hàng</string>
    <string name="time_open">Thời gian mở của</string>
    <string name="time_close">Thời gian đóng cửa</string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Số điện thoại</string>
    <string name="website">Website</string>
    <string name="update_food">Cập nhật thông tin món ăn</string>
    <string name="unblock_success">Mở khóa thành công</string>
    <string name="unlock_success">Mở khóa tài khoản thành công</string>
    <string name="success">Thành công</string>
</resources>
