<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="?android:attr/actionBarSize">
            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/update_category"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <EditText
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:id="@+id/edtCategoryName"
            android:padding="10dp"
            android:hint="@string/category_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/spinner_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:id="@+id/edtCategoryImage"
            android:padding="10dp"
            android:hint="@string/category_image"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/spinner_background"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:layout_marginBottom="10dp"
            android:id="@+id/btnSubmit"
            style="?android:attr/textAppearanceMedium"
            android:text="@string/update"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baclground_ver2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.CardView>