<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/actionBarSize">
        <com.example.sharefoodmanagement.view.CustomItalyTextView
            android:layout_width="wrap_content"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/edit_res"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/name_res"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtNameRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/time_open"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtOpenTimeRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:focusable="false"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/time_close"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/edtCloseTimeRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:focusable="false"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/address"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtAddressRes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textAlignment="center" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/phone"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtPhoneRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/website"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtWebsiteRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/spinner_background"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center" />

            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/btnUpdateRes"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/baclground_ver2"
                android:text="@string/update"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>