<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RestaurantInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRestaurantInfo"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/actionBarSize">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/restaurant_info"
                android:textColor="@color/white"
                android:layout_gravity="center"
                style="?android:attr/textAppearanceLarge"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginRight="10dp"
                android:id="@+id/imgBack"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_lock_black_24dps"
                android:layout_marginRight="10dp"
                android:id="@+id/imgDelete"
                android:layout_gravity="center_vertical|right"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_res"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <ImageView
                    android:id="@+id/imgResInfo"
                    android:layout_gravity="bottom|center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loading"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </FrameLayout>

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:id="@+id/tvNameResInfo"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                style="?android:attr/textAppearanceLarge"
                android:layout_height="wrap_content" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:id="@+id/tvStatusResInfo"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                style="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:id="@+id/tvOpenTimeResInfo"
                android:drawableLeft="@drawable/ic_open_time"
                android:layout_height="wrap_content" />
            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:id="@+id/tvAddressResInfo"
                android:drawableLeft="@drawable/ic_address"
                android:layout_height="wrap_content" />
            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:id="@+id/tvPhoneResInfo"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                android:layout_height="wrap_content" />
            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:id="@+id/tvWebsiteResInfo"
                android:drawableLeft="@drawable/ic_web"
                android:layout_height="wrap_content" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/province_info"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_point"
                android:layout_height="wrap_content" />

            <com.example.sharefoodmanagement.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:id="@+id/tvProvinceResInfo"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>